# scaling-primate-vvs

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test.ipynb
analysis/curve_fitting/configs/adv/: adv_base.yaml
analysis/curve_fitting/configs/compute/: chinchilla.yaml  compute_base.yaml  compute_behavior.yaml  compute_neuro.yaml
analysis/curve_fitting/configs/sample/: imagenet21kP_scaling.yaml  inaturalist_scaling.yaml  places365_scaling.yaml  sample_base.yaml  webvisionP_scaling.yaml
analysis/curve_fitting/configs/ssl/: ssl_base.yaml
analysis/curve_fitting/fitting_results/compute_chinchilla/: results.pkl
analysis/curve_fitting/fitting_results/model_convnext_neuro/: results.pkl
analysis/curve_fitting/fitting_results/model_efficientnet_avg/: results.pkl
analysis/curve_fitting/fitting_results/model_efficientnet_behavior/: results.pkl
analysis/curve_fitting/fitting_results/model_resnet_avg/: results.pkl
analysis/curve_fitting/scripts/: fit_all.sh  fit_compute.sh  fit_region.sh  fit_sample.sh  test_all.sh
analysis/curve_fitting/src/: start_fitting.py
brainscore/results/: commitments.json
brainscore/scripts/: test_benchmark_model.sh  test_layer_selection.sh
brainscore/src/: benchmark_layers.py  benchmark_model.py  layer_scoring.py  layer_selection.py  random_projection.py
brainscore/src/utils/: __init__.py  layers.py  parser.py  postprocess.py  wrapper.py
notebooks/: sandbox.ipynb
results/: benchmark_scores.csv  benchmark_scores_brainscore.csv  benchmark_scores_ckpts.csv  model_checkpoints.csv
scaling_primate_vvs/: __init__.py
scaling_primate_vvs/analysis/: __init__.py
scaling_primate_vvs/analysis/curve_fitting/: __init__.py
scaling_primate_vvs/artifacts/: __init__.py  artifacts_helpers.py  benchmark_scores.csv  model_checkpoints.csv
scaling_primate_vvs/brainscore/scripts/: test_benchmark_layers.sh  test_layer_scoring.sh
scaling_primate_vvs/brainscore/src/: benchmark_layers.py  benchmark_model.py  config.py  layer_scoring.py  layer_selection.py
scaling_primate_vvs/training/src/: __init__.py  train.py
scaling_primate_vvs/visualization/fig1/: compute_neuro_beh.ipynb  compute_neuro_beh_rand.ipynb
scaling_primate_vvs/visualization/fig11/: untrained.ipynb
scaling_primate_vvs/visualization/fig14/: pair.ipynb
scaling_primate_vvs/visualization/fig16/: accuracy.ipynb
scaling_primate_vvs/visualization/fig2/: compute_arch.ipynb  compute_arch_avg.ipynb  params.ipynb
scaling_primate_vvs/visualization/fig4/: chinchilla.ipynb
scaling_primate_vvs/visualization/fig5/: regions_compare.ipynb
scaling_primate_vvs/visualization/fig7/: adv.ipynb  simclr.ipynb  sup_evo.ipynb
scaling_primate_vvs/visualization/fig8/: private.ipynb  public_private.ipynb
training/: __init__.py
training/scripts/test/: adv_resnet18.sh  dino_resnet18.sh  resnet18.sh  simclr_resnet18.sh
training/src/: optim.py  train.py
training/src/dataloaders/: __init__.py  dataloaders.py  transforms.py  utils.py
training/src/models/: adversarial.py  aim.py  base.py  deit.py  efficientnet.py  models.py  others.py  resnet.py
training/src/utils/: parser.py  schedulers.py
visualization/fig1/: compute_neuro_beh.ipynb
visualization/fig12/: unsup_bar.ipynb
visualization/fig2/: compute_arch.ipynb  compute_arch_avg.ipynb  params.ipynb
visualization/fig3/: sample_eff.ipynb  sample_scaling.ipynb
visualization/fig4/: chinchilla.ipynb  compute_arch.ipynb
visualization/fig5/: regions_compare.ipynb
visualization/fig6/: regions_corr.ipynb
visualization/fig7/: unsup.ipynb
visualization/fig9/: params_pretrained.ipynb
visualization/src/: visualize.py
visualization/src/utils/: __init__.py  plotting.py
(+217 files in other folders)
